--- a/src/Components/Needledust/Needledust.css
+++ b/src/Components/Needledust/Needledust.css
@@ -1,5 +1,6 @@
 .needMain {
     padding: 20px;
+    margin-top: 30px;
   }
   
   .needHeader {
@@ -9,6 +10,7 @@
   .needHeader h1 {
     font-size: 24px;
     margin-bottom: 20px;
+    font-weight: normal;
   }
   
   .needImages {
