--- a/src/Components/Purses/Purses.css
+++ b/src/Components/Purses/Purses.css
@@ -1,5 +1,6 @@
 .purseMain {
     padding: 20px;
+    margin-top: 30px;
   }
   
   .purseHeader {
@@ -9,6 +10,7 @@
   .purseHeader h1 {
     font-size: 24px;
     margin-bottom: 20px;
+    font-weight: normal;
   }
   
   .purseImages {
@@ -59,5 +61,27 @@
     }
   }
   
+
+  .pursesBottom {
+    margin-top: 50px;
+    margin-left: 30px;
+    margin-right: 30px;
+    font-weight: lighter; /* Adjust the font weight as needed */
+  }
+  
+  .pursesBottom h5 {
+    word-spacing: 7px;
+   font-weight: normal;
+    margin-bottom: 10px; /* Add margin below headings */
+  }
+  
+  .pursesBottom p {
+    overflow-wrap: break-word;
+    margin-bottom: 20px; /* Add margin below paragraphs */
+    line-height: 1.5; /* Set line height for paragraphs */
+  }
+  
+
+ 
 
  
