--- a/src/Components/Women/Heels.css
+++ b/src/Components/Women/Heels.css
@@ -1,14 +1,17 @@
 .heelsMain {
     padding: 20px;
+    margin-top: 50px;
   }
   
   .heelsHeader {
     text-align: center;
+   
   }
   
   .heelsHeader h1 {
     font-size: 24px;
     margin-bottom: 20px;
+    font-weight: normal;
   }
   
   .heelsImages {
@@ -33,4 +36,25 @@
     cursor: pointer;
   }
 
+  .heelsBottom {
+    margin-top: 50px;
+    margin-left: 30px;
+    margin-right: 30px;
+    font-weight: lighter; /* Adjust the font weight as needed */
+  }
+  
+  .heelsBottom h5 {
+    word-spacing: 7px;
+   font-weight: normal;
+    margin-bottom: 10px; /* Add margin below headings */
+  }
+  
+  .heelsBottom p {
+    overflow-wrap: break-word;
+    margin-bottom: 20px; /* Add margin below paragraphs */
+    line-height: 1.5; /* Set line height for paragraphs */
+  }
+  
+
+ 
  
