--- a/src/Components/Women/Kolhaparis.css
+++ b/src/Components/Women/Kolhaparis.css
@@ -1,5 +1,6 @@
 .kolhaMain {
     padding: 20px;
+    margin-top: 30px;
   }
   
   .kolhaHeader {
@@ -9,6 +10,7 @@
   .kolhaHeader h1 {
     font-size: 24px;
     margin-bottom: 20px;
+    font-weight: normal;
   }
   
   .kolhaImages {
