--- a/src/Components/Women/Sandals.css
+++ b/src/Components/Women/Sandals.css
@@ -1,5 +1,6 @@
 .sandalsMain {
     padding: 20px;
+    margin-top: 30px;
   }
   
   .sandalsHeader {
@@ -9,6 +10,7 @@
   .sandalsHeader h1 {
     font-size: 24px;
     margin-bottom: 20px;
+    font-weight: normal;
   }
   
   .sandalsImages {
@@ -33,4 +35,26 @@
     cursor: pointer;
   }
 
+
+  .sandalsBottom {
+    margin-top: 50px;
+    margin-left: 30px;
+    margin-right: 30px;
+    font-weight: lighter; /* Adjust the font weight as needed */
+  }
+  
+  .sandalsBottom b {
+    word-spacing: 7px;
+font-weight: bold;
+    margin-bottom: 10px; /* Add margin below headings */
+  }
+  
+  .sandalsBottom p {
+    overflow-wrap: break-word;
+    margin-bottom: 20px; /* Add margin below paragraphs */
+    line-height: 1.5; /* Set line height for paragraphs */
+  }
+  
+
+ 
  
