--- a/src/Components/Women/Women.css
+++ b/src/Components/Women/Women.css
@@ -1,14 +1,17 @@
 .womenMain {
     padding: 20px;
+    margin-top: 30px;
   }
   
   .womenHeader {
     text-align: center;
+    font-weight: lighter;
   }
   
   .womenHeader h1 {
     font-size: 24px;
     margin-bottom: 20px;
+    font-weight: normal;
   }
   
   .WomenImages {
@@ -32,5 +35,25 @@
     transform: scale(1.1); /* Zoom effect on hover */
     cursor: pointer;
   }
+
+  .womenBottom {
+    margin-top: 50px;
+    margin-left: 30px;
+    margin-right: 30px;
+    font-weight: lighter; /* Adjust the font weight as needed */
+  }
+  
+  .womenBottom h5 {
+    word-spacing: 7px;
+   font-weight: normal;
+    margin-bottom: 10px; /* Add margin below headings */
+  }
+  
+  .womenBottom p {
+    overflow-wrap: break-word;
+    margin-bottom: 20px; /* Add margin below paragraphs */
+    line-height: 1.5; /* Set line height for paragraphs */
+  }
+  
 
  
